--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     },
     "dependencies": {
         "body-parser": "^1.20.2",
-        "express": "^4.16.4"
+        "express": "^4.16.4",
+        "react-scripts": "^5.0.1"
     },
     "devDependencies": {
         "concurrently": "^4.0.1"
