--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dependencies": {
         "body-parser": "^1.20.2",
         "express": "^4.16.4",
+        "mysql": "^2.18.1",
         "react-scripts": "^5.0.1"
     },
     "devDependencies": {
